Mobile social icons stretch fix

--- a/style.scss
+++ b/style.scss
@@ -103,7 +103,7 @@ body {
         }
 
         .navigation_contact{
-          margin: 0 0.3em;
+          margin: 0 0.35em;
         }
         
         .navigation_hiring {
@@ -235,7 +235,7 @@ body {
           & > div {
             width: 30px;
             height: 30px;
-            margin: 10px;
+            margin: 1.2vw;
             padding: 10px;
             background-color: #ffffff;
             border-radius: 50%;
